# refpuzzle

./: .gitignore  .oxfmtrc.json  CLAUDE.md  Cargo.toml  PLAN.md  README.md  index.html  oxlint.config.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
docs/: engine-details.md  engine.md
public/: analytics-helper.php  analytics.php  config.example.php  manifest.json  sw.js  sync.php
rust/: Cargo.toml
rust/src/: assemble.rs  build.rs  check.rs  check_answer.rs  check_answerable.rs  check_form.rs  check_validity.rs  check_well_posed.rs  cli.rs  construct.rs  construct_puzzle.rs  construct_v2.rs  deduce.rs  diagnose.rs  difficulty.rs  evaluate.rs  explain.rs  fill.rs  format.rs  gen_common.rs  hints.rs  lib.rs  lookahead.rs  main.rs  render.rs  rng.rs  serialize.rs  solve.rs  solve_brute.rs  solve_deduce.rs  solver.rs  stats.rs  test_symmetry.rs  test_util.rs  time.rs  type_stats.rs  types.rs  validate_form.rs
rust/src/cli/: check.rs  diagnose.rs  reference.rs  type_stats.rs
rust/src/construct/: repair.rs
rust/src/construct_v2/: repair.rs
scripts/: bench.ts  check-diff.ts  check-solvable.mts  check.ts  common.ts  debug-stuck.mts  debug-trace.mts  gen-diff.ts  gen-icons.sh  gen-logo.ts  gen.ts  generate-puzzles.ts  generate-year.ts  generate.ts  migrate-levels.mjs  regenerate.sh  test-check-answer.mts  test-check-validity.mts  test-contradiction.mts  test-deduce.mts  test-hints.mts  test-lookahead.mts  test-solve.mts  test.ts  trace-diff.ts  vite-bench.config.ts
src/: App.tsx  index.css  main.tsx  tinykeys.d.ts
tests/: check-answer.json  check-form.json  check-validity.json  (+8 more)
(+90 files in other folders)
