[package]
name = "refpuzzle"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arrayvec = "0.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
flate2 = "1"
base64 = "0.22"
