[package]
name = "refpuzzle"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[lints.clippy]
# Many engine/generator fns deliberately thread fp/state/push/flags as flat args
# (hot paths; bundling into structs hurts clarity and adds indirection). Off globally.
too_many_arguments = "allow"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arrayvec = "0.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"
flate2 = "1"
base64 = "0.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
lol_alloc = "0.4"
